# esl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: generate_m00_data.py
website/: docusaurus.config.ts  sidebars.ts
website/docs/: contents.md  index.md  plan.md
website/docs/modules/: m00.md  m00.mdx  m01.md  m02.md  m03.md  m04.md  m05.md  m06.md  m07.md  m08.md  m09.md  m10.md  m11.md  m12.md  m13.md  m14.md  m15.md  m16.md  m17.md  m18.md  m19.md  m20.md  m21.md  m22.md  m23.md  m24.md  m25.md  m26.md
website/src/components/Charts/m00/: AlgorithmComparison.tsx  CILandscape.tsx  CMAESConvergence.tsx  DimensionScaling.tsx  ECFamilyTree.tsx  ESvsGD.tsx  FitnessLandscape.tsx  PopulationEvolution.tsx
website/src/components/FeedbackWidget/: index.tsx
website/src/components/HomepageHeader/: index.tsx  styles.module.css
website/src/components/ModuleBanner/: index.tsx  styles.module.css
website/src/components/ModuleCards/: index.tsx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
